# PyATEMMax

./: .editorconfig  .gitignore  .pylintrc  README-pypi.md  README.md  setup.cfg  setup.py
PyATEMMax/: ATEMBuffer.py  ATEMCommandHandlers.py  ATEMConnectionManager.py  ATEMConstant.py  ATEMException.py  ATEMMax.py  ATEMProtocol.py  ATEMProtocolEnums.py  ATEMSetterMethods.py  ATEMSocket.py  ATEMSwitcherState.py  ATEMUtils.py  ATEMValueDict.py  README.md  __init__.py
PyATEMMax/StateData/: AudioMixer.py  AuxSource.py  CameraControl.py  ClipPlayer.py  ColorGenerator.py  DownConverter.py  DownStreamKeyer.py  FadeToBlack.py  FairlightMixer.py  InputProperties.py  Key.py  Keyer.py  LastStateChange.py  Macro.py  MediaPlayer.py  MediaPoolStorage.py  MixEffect.py  MultiViewer.py  Power.py  PreviewInput.py  ProgramInput.py  ProtocolVersion.py  SuperSource.py  Tally.py  Topology.py  Transition.py  VideoMixer.py  VideoMode.py  __init__.py
docs/: Gemfile  README.md  _config.yml  index.md
docs/_data/: nav.yaml
docs/_includes/: footer.html  head.html  header.html  navigation.html  social.html
docs/_posts/: 2020-11-16-development-started.md  2020-11-23-new-docs-site.md  2020-11-29-new-logo.md  2020-12-10-release-0-1-b1.md  2020-12-10-release-1-0-b1.md  2021-01-25-release-0-1-b2.md  2021-01-25-release-1-0-b2.md  2021-02-23-release-1-0-b3.md  2021-05-16-release-1-0-b4.md  (+5 more)
examples/: README.md  change-settings-multi.py  change-settings.py  events.py  ping.py  scan-query.py  scan.py  scheduled-tasks.py  tally-str.py  tally.py
tmp-dev-utils/: log-reader.py  switcher-spy.py
(+35 files in other folders)
