[metadata]
name = PyATEMMax
version = 1.0b7
author = Tony Aguilar
author_email = onixag@gmail.com
description = A Python library to monitor and control Blackmagic Design ATEM video switchers.
long_description = file: README-pypi.md
long_description_content_type = text/markdown
license = GPL
license_file = LICENSE.md
url = https://github.com/clvLabs/PyATEMMax
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
python_requires = >=3.6
platforms = any

[options]
packages = find:
zip_safe = True
